--- a/src/main/resources/com/example/tradingapp/ui/ChartsView.fxml
+++ b/src/main/resources/com/example/tradingapp/ui/ChartsView.fxml
@@ -1,14 +1,53 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<?import com.example.tradingapp.ui.CandleStickChart?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.text.Text?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<StackPane xmlns:fx="http://javafx.com/fxml"
+         fx:controller="com.example.tradingapp.ui.ChartsController">
+    <VBox spacing="10">
+        <padding>
+            <Insets top="10" right="10" bottom="10" left="10"/>
+        </padding>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
+        <Label fx:id="stockNameLabel" text="Select Stock" styleClass="section-title"/>
 
-</AnchorPane>
+        <HBox alignment="CENTER_LEFT" spacing="15">
+            <ComboBox fx:id="cmbInstruments" promptText="Select…" styleClass="combo-box"/>
+        </HBox>
+        
+        <HBox alignment="CENTER_LEFT" spacing="10">
+            <VBox spacing="5" style="-fx-padding: 10; -fx-border-radius: 5; -fx-background-radius: 5;">
+                <Label fx:id="openLabel" text="Open: $0.00"/>
+                <Label fx:id="closeLabel" text="Close: $0.00"/>
+                <Label fx:id="highLabel" text="High: $0.00"/>
+                <Label fx:id="lowLabel" text="Low: $0.00"/>
+                <Label fx:id="changeLabel" text="Change: +$0.00 (0.00%)"/>
+            </VBox>
+            
+            <Region HBox.hgrow="ALWAYS" />
+            
+            <Label text="Date:" styleClass="labelTitle"/>
+            <DatePicker fx:id="datePicker"/>
+            
+        </HBox>
+
+        <StackPane VBox.vgrow="ALWAYS">
+            <CandleStickChart fx:id="stockChart" VBox.vgrow="ALWAYS"/>
+        </StackPane>
+    </VBox>
+    
+    <ImageView fitWidth="60" preserveRatio="true" StackPane.alignment="TOP_RIGHT" styleClass="corner-logo">
+        <Image url="@images/yolosim.png"/>
+    </ImageView>
+</StackPane>
